--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pulse</title>
     <link rel="styleheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>Pulse</title>
 </head>
 <body>
-    <p>fuckin gulp</p>
+    <div class="promo">
+        <div class="container">
+            <header class="header">
+                <div class="header__logo">
+                    <img src="icons/logo.png" alt="logo">
+                </div>
+                <div class="header__official">
+                    Официальный представитель
+                    <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__contacts">
+                    <a href="+74999228974" class="phone_number">+7 (499) 922-89-74</a>
+                    <button class="button">заказать звонок</button>
+                </div>
+            </header>
+
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+                
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="icons/main_screen/hand-cart.png" alt="hand-cart">
+                        <div class="icon_descr">Время подбора:10 минут</div> 
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/main_screen/messages.png" alt="messages">
+                        <div class="icon_descr">Бесплатная доставка</div>
+                    </div>
+                    <div class="promo__icon">
+                        <img src="icons/main_screen/timer.png" alt="timer">
+                        <div class="icon_descr">Ответим на все вопросы</div>
+                    </div>
+                </div>
+
+                <button class="button button__main">заказать кОНСУЛЬТАЦИЮ</button>
+                <div class="promo__link">
+                    или
+                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a> 
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
